--- a/4 - app/css/index.css
+++ b/4 - app/css/index.css
@@ -17,10 +17,20 @@ html{
     font-weight: 500;
     font-size: 1.2em;
     color: var(--blanco);
+    z-index: -30;
 }
 
 h1{
-    font-size: 6em;
+    font-size: 5em;
+    font-weight: 500;
+}
+
+h2{
+    font-size: 3em;
+}
+
+h3{
+    font-size: 2em;
 }
 
 header{
@@ -59,48 +69,49 @@ a{
     color: #FEFCFF;
 }
 
-main{
-    width: 100%;
+a:hover{
+    color: var(--resaltado);
+    transition: all 0.6s;
 }
 
-main::after{
-    content: "";
-    background-image: url("../media/papyrus-dark.webp");
-    opacity: 0.2;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    position: absolute;
-    z-index: -1;
-}
-
-.home{
+.cabecera{
     height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
+    background-image: url("../media/bitcoin-logo-3d.png");
+    background-size: 100em;
+    background-position: center;
+    backdrop-filter: blur(2px);
 }
 
-.cripto{
-    width: 40%;
-    padding: 1em;
-}
-
-.home img{
+.cabecera img{
     transform: rotate(10deg);
     filter: drop-shadow(0 0 50px#af8cfa70);
 }
 
-.more div{
+.cabecera div{
+    width: 40%;
+    padding: 2em;
+}
+
+.more{
+    width: 80%;
+    margin: 0 auto;
+}
+
+.more > div{
+    padding: 2em;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
+.more img{
+    width: 15em;
+}
+
 footer{
-    width: 100%;
-    height: 5em;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -109,4 +120,8 @@ footer{
 footer svg{
     fill: var(--blanco);
     width: 3em;
+}
+
+#selected{
+    color: var(--azul);
 }
